odmazaný print kategorií

--- a/prochazeni_dat_web_scraping.ipynb
+++ b/prochazeni_dat_web_scraping.ipynb
@@ -1099,8 +1099,7 @@
     }
    ],
    "source": [
-    "reviews = cafes['reviewsCount'].to_dict()\n",
-    "reviews\n"
+    "reviews = cafes['reviewsCount'].to_dict()"
    ]
   },
   {
