odmazání nepotřebných klíčů, filtrace dle kategorie pro původní dataset

--- a/nacteni_dat_web_scraping.ipynb
+++ b/nacteni_dat_web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_list_of_data(cafes_list, keys_to_remove):\n",
-    "    for cafe in cafes_list:\n",
-    "        for key in keys_to_remove:\n",
-    "            cafe.pop(key, None) \n",
-    "    return cafes_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,24 +22,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys_to_remove = ['searchPageUrl', 'searchPageLoadedUrl', 'isAdvertisement', 'price', 'cid', 'imagesCount', 'imageCategories', 'scrapedAt', 'googleFoodUrl', \n",
-    "                  'hotelAds', 'peopleAlsoSearch', 'gasPrices', 'neighborhood', 'state', 'hotelDescription']\n",
-    "\n",
-    "cafes_cleaned = clean_list_of_data(cafes, keys_to_remove)"
+    "def filter_keys_in_list_of_cafes(data, keys):\n",
+    "    # filtruje klíče ve slovnících \"cafe\" obsažených v celkovém senzmau\n",
+    "    # parametry: data = stažená data, keys = seznam klíčů, které chceme zachovat\n",
+    "    filtered_data = []\n",
+    "    for cafe in data:\n",
+    "        filtered_cafe = {key: value for key, value in cafe.items() if key in keys}\n",
+    "        filtered_data.append(filtered_cafe)\n",
+    "    return filtered_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_by_category(data):\n",
+    "    # filtruje seznam slovníků kaváren podle klíče \"categoryName\"\n",
+    "    # parametr: data = stažená data\n",
+    "    filtered_cafes = []\n",
+    "    for cafe in data:\n",
+    "        if cafe['categoryName'] == 'Cafe' or cafe['categoryName'] == 'Coffee shop' or cafe['categoryName'] == 'Espresso bar':\n",
+    "            filtered_cafes.append(cafe)\n",
+    "    return filtered_cafes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cafes_cleaned = filter_keys_in_list_of_cafes(cafes, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
+    "               'postalCode', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', 'openingHours', 'url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cafes_filtered = filter_by_category(cafes_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('dataset_google-maps-extractor_Brno_kavarny_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
-    "    json.dump(cafes_cleaned, output_file, indent=4, ensure_ascii=False)"
+    "    json.dump(cafes_filtered, output_file, indent=4, ensure_ascii=False)"
    ]
   }
  ],
