načtení datasetů pro kategorie cafe, coffe bar a espresso bar

--- a/prochazeni_dat_web_scraping.ipynb
+++ b/prochazeni_dat_web_scraping.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import collections"
    ]
   },
   {
@@ -371,6 +372,131 @@
    ],
    "source": [
     "cafes.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(351, 13)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cafes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None '635 00' '664 71' '621 00' '612 00' '641 00' '613 00' '624 00'\n",
+      " '623 00' '638 00' '616 00' '614 00' '602 00' '639 00' '603 00' '625 00'\n",
+      " '642 00' '634 00' '619 00' '620 00' '637 00' '618 00' '611 80' '627 00'\n",
+      " '636 00' '628 00' '615 00' '664 42' '617 00' '601 77' '643 00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_postalCodes = cafes['postalCode']\n",
+    "list_of_unique_postalCodes = cafes['postalCode'].unique()\n",
+    "print(list_of_unique_postalCodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.info of 0        None\n",
+       "1      635 00\n",
+       "2      664 71\n",
+       "3      621 00\n",
+       "4      621 00\n",
+       "        ...  \n",
+       "346    602 00\n",
+       "347    602 00\n",
+       "348    620 00\n",
+       "349    602 00\n",
+       "350    643 00\n",
+       "Name: postalCode, Length: 351, dtype: object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_postalCodes.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'602 00': 174,\n",
+       "         '612 00': 27,\n",
+       "         '635 00': 13,\n",
+       "         '616 00': 12,\n",
+       "         '625 00': 12,\n",
+       "         '613 00': 11,\n",
+       "         '614 00': 10,\n",
+       "         '603 00': 10,\n",
+       "         '621 00': 9,\n",
+       "         '619 00': 8,\n",
+       "         None: 7,\n",
+       "         '639 00': 7,\n",
+       "         '628 00': 6,\n",
+       "         '638 00': 5,\n",
+       "         '627 00': 5,\n",
+       "         '615 00': 5,\n",
+       "         '623 00': 4,\n",
+       "         '620 00': 4,\n",
+       "         '624 00': 3,\n",
+       "         '637 00': 3,\n",
+       "         '618 00': 3,\n",
+       "         '636 00': 2,\n",
+       "         '664 42': 2,\n",
+       "         '617 00': 2,\n",
+       "         '664 71': 1,\n",
+       "         '641 00': 1,\n",
+       "         '642 00': 1,\n",
+       "         '634 00': 1,\n",
+       "         '611 80': 1,\n",
+       "         '601 77': 1,\n",
+       "         '643 00': 1})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "postalCode_counts = collections.Counter(list_of_postalCodes)\n",
+    "\n",
+    "postalCode_counts"
    ]
   }
  ],
