--- a/nacteni_dat_web_scraping.ipynb
+++ b/nacteni_dat_web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "cafes_cleaned = filter_keys_in_list_of_cafes(cafes, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
-    "               'postalCode', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', 'openingHours', 'url'])"
+    "               'postalCode', 'claimThisBusiness', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', \n",
+    "               'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open ('dataset_google-maps-extractor_2024-04-18_Brno_Coffee_bar.json', encoding='utf-8') as file:\n",
-    "    category_coffee_bar = json.load(file)"
+    "with open ('dataset_google-maps-extractor_2024-04-18_Brno_Coffee_shop.json', encoding='utf-8') as file:\n",
+    "    category_coffee_shop = json.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,61 +117,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, ['searchString', 'title', 'categoryName', \n",
+    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
+    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
-    "               'postalCode', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', 'openingHours', 'url'])"
+    "category_cafe_filtered = filter_by_category(category_cafe_cleaned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_coffee_bar_cleaned = filter_keys_in_list_of_cafes(category_coffee_bar, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
-    "               'postalCode', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', 'openingHours', 'url'])"
+    "category_coffee_shop_cleaned = filter_keys_in_list_of_cafes(category_coffee_shop, ['searchString', 'title', 'categoryName', \n",
+    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
+    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
-    "               'postalCode', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', 'openingHours', 'url'])"
+    "category_coffee_shop_filtered = filter_by_category(category_coffee_shop_cleaned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, ['searchString', 'title', 'categoryName', \n",
+    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
+    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_espresso_bar_filtered = filter_by_category(category_espresso_bar_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('dataset_google-maps-extractor_Brno_category_cafe_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
-    "    json.dump(category_cafe_cleaned, output_file, indent=4, ensure_ascii=False)\n",
+    "    json.dump(category_cafe_filtered, output_file, indent=4, ensure_ascii=False)\n",
     "\n",
-    "with open('dataset_google-maps-extractor_Brno_category_coffee_bar_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
-    "    json.dump(category_coffee_bar_cleaned, output_file, indent=4, ensure_ascii=False)\n",
+    "with open('dataset_google-maps-extractor_Brno_category_coffee_shop_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
+    "    json.dump(category_coffee_shop_filtered, output_file, indent=4, ensure_ascii=False)\n",
     "\n",
     "with open('dataset_google-maps-extractor_Brno_category_espresso_bar_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
-    "    json.dump(category_espresso_bar_cleaned, output_file, indent=4, ensure_ascii=False)"
+    "    json.dump(category_espresso_bar_filtered, output_file, indent=4, ensure_ascii=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'4Comfort',\n",
-       " 'Baby Cafe and TeaRoom MEZI STROMY',\n",
-       " 'CLUB CAFE s.r.o.',\n",
        " 'Caffe Idea S. R. O.',\n",
        " 'Caffe Piccolo Mondo',\n",
        " 'Café Leitnerka',\n",
@@ -179,7 +208,6 @@
        " 'City Cafe',\n",
        " 'DuckBar',\n",
        " 'Galerie Vaňkovka',\n",
-       " 'ICE Invest spol. s r.o.',\n",
        " 'Klárabára Winecafé',\n",
        " 'König Cafe',\n",
        " 'Leyaly lounge',\n",
@@ -197,23 +225,39 @@
        " 'Čerpací stanice Shell Brno Řečkovice'}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_cafe = set(cafe[\"title\"] for cafe in category_cafe_cleaned)\n",
+    "set_cafe = set(cafe[\"title\"] for cafe in category_cafe_filtered)\n",
     "set_kavarna = set(cafe[\"title\"]for cafe in cafes_filtered)\n",
     "\n",
-    "cafe_diff = set_cafe.difference(set_kavarna)\n",
+    "cafe_diff_titles = set_cafe.difference(set_kavarna)\n",
     "\n",
-    "cafe_diff"
+    "cafe_diff_titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_cafe = []\n",
+    "\n",
+    "for cafe in category_cafe_filtered:\n",
+    "    if cafe['title'] in cafe_diff_titles:\n",
+    "        diff_cafe.append(cafe)\n",
+    "\n",
+    "with open('diff_cafe.json', mode='w', encoding='utf-8') as output_file:\n",
+    "    json.dump(diff_cafe, output_file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +273,6 @@
        " 'Café In The Ghetto',\n",
        " 'Café Rudolf',\n",
        " 'ChURROS',\n",
-       " 'Chleba Brno',\n",
        " 'Cukrárna Cukrlenka',\n",
        " 'Cukrárna Eliška',\n",
        " 'Cukrárna Větrník - Lidická',\n",
@@ -274,62 +317,75 @@
        " 'Žádný Cukrbliky'}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_coffee_bar = set(cafe[\"title\"] for cafe in category_coffee_bar_cleaned)\n",
+    "set_coffee_shop = set(cafe[\"title\"] for cafe in category_coffee_shop_filtered)\n",
     "set_kavarna = set(cafe[\"title\"]for cafe in cafes_filtered)\n",
     "\n",
-    "cafe_diff_2 = set_coffee_bar.difference(set_kavarna)\n",
+    "coffee_shop_diff_titles = set_coffee_shop.difference(set_kavarna)\n",
     "\n",
-    "cafe_diff_2"
+    "coffee_shop_diff_titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_coffee_shop = []\n",
+    "\n",
+    "for cafe in category_coffee_shop_filtered:\n",
+    "    if cafe['title'] in coffee_shop_diff_titles:\n",
+    "        diff_coffee_shop.append(cafe)\n",
+    "\n",
+    "with open('diff_coffee_shop.json', mode='w', encoding='utf-8') as output_file:\n",
+    "    json.dump(diff_coffee_shop, output_file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Antikvariát',\n",
-       " 'BIG ONE FITNESS',\n",
-       " 'Café Restaurant Bibus & Jídelna & kantýna',\n",
-       " 'Dezertína',\n",
-       " 'Ignis Lounge Brno',\n",
-       " 'KŠÍROVKA sport a zábava',\n",
-       " 'La mozzarella',\n",
-       " 'OC Nosreti - Café 52',\n",
-       " 'OMNi café & brunch',\n",
-       " 'Patio Café & Bar',\n",
-       " 'Pavillon Steak House',\n",
-       " 'Restaurace U Lucerny',\n",
-       " 'Rum Bar',\n",
-       " 'Stříbrná růže - Whiskyshop & Cafe',\n",
-       " 'TERASA',\n",
-       " 'Wellness park Lužánky',\n",
-       " 'Young Space',\n",
-       " 'ZANNAM Restaurant',\n",
-       " 'Základna Tři Ocásci',\n",
-       " 'ŠOLC design cafe & showroom&barber'}"
+       "{'OC Nosreti - Café 52', 'Patio Café & Bar'}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_espresso_bar = set(cafe[\"title\"] for cafe in category_espresso_bar_cleaned)\n",
+    "set_espresso_bar = set(cafe[\"title\"] for cafe in category_espresso_bar_filtered)\n",
     "set_kavarna = set(cafe[\"title\"]for cafe in cafes_filtered)\n",
     "\n",
-    "cafe_diff_3 = set_espresso_bar.difference(set_kavarna)\n",
+    "espresso_bar_diff_titles = set_espresso_bar.difference(set_kavarna)\n",
     "\n",
-    "cafe_diff_3"
+    "espresso_bar_diff_titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_espresso_bar = []\n",
+    "\n",
+    "for cafe in category_espresso_bar_filtered:\n",
+    "    if cafe['title'] in espresso_bar_diff_titles:\n",
+    "        diff_espresso_bar.append(cafe)\n",
+    "\n",
+    "with open('diff_espresso_bar.json', mode='w', encoding='utf-8') as output_file:\n",
+    "    json.dump(diff_espresso_bar, output_file, indent=4, ensure_ascii=False)"
    ]
   }
  ],
