doplnění categories, normalizace a vytvoření CSV

--- a/nacteni_dat_web_scraping.ipynb
+++ b/nacteni_dat_web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,33 @@
     "            if key in keys:\n",
     "                filtered_cafe[key] = value\n",
     "        filtered_data.append(filtered_cafe)\n",
-    "    return filtered_data"
+    "    return filtered_data\n",
+    "\n",
+    "keys_needed = [\n",
+    "    'searchString', \n",
+    "    'title', \n",
+    "    'categoryName',\n",
+    "    'categories', \n",
+    "    'address', \n",
+    "    'street', \n",
+    "    'city', \n",
+    "    'postalCode', \n",
+    "    'claimThisBusiness', \n",
+    "    'location', \n",
+    "    'totalScore', \n",
+    "    'reviewsCount', \n",
+    "    'reviewsDistribution', \n",
+    "    'temporarilyClosed', \n",
+    "    'placeId', \n",
+    "    'cid', \n",
+    "    'openingHours', \n",
+    "    'url',\n",
+    "    ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cafes_cleaned = filter_keys_in_list_of_cafes(cafes, ['searchString', 'title', 'categoryName', 'address', 'street', 'city', \n",
-    "               'postalCode', 'claimThisBusiness', 'location', 'totalScore', 'reviewsCount', 'reviewsDistribution', \n",
-    "               'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+    "cafes_cleaned = filter_keys_in_list_of_cafes(cafes, keys_needed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,18 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, ['searchString', 'title', 'categoryName', \n",
-    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
-    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, keys_needed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,18 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_coffee_shop_cleaned = filter_keys_in_list_of_cafes(category_coffee_shop, ['searchString', 'title', 'categoryName', \n",
-    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
-    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+    "category_coffee_shop_cleaned = filter_keys_in_list_of_cafes(category_coffee_shop, keys_needed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, ['searchString', 'title', 'categoryName', \n",
-    "            'address', 'street', 'city', 'postalCode', 'claimThisBusiness', 'location', 'totalScore', \n",
-    "            'reviewsCount', 'reviewsDistribution', 'temporarilyClosed', 'placeId', 'cid', 'openingHours', 'url'])"
+    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, keys_needed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +238,7 @@
        " 'Čerpací stanice Shell Brno Řečkovice'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +330,7 @@
        " 'Žádný Cukrbliky'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +371,7 @@
        "{'OC Nosreti - Café 52', 'Patio Café & Bar'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
