--- a/prochazeni_dat_web_scraping.ipynb
+++ b/prochazeni_dat_web_scraping.ipynb
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "cafes = pd.read_json('dataset_google-maps-extractor_Brno_kavarny_cleaned.json')\n",
+    "cafes = ('dataset_google-maps-extractor_Brno_kavarny_cleaned.json')\n",
     "cafes"
    ]
   },
